[gd_scene load_steps=26 format=3 uid="uid://g7iyyiv2xqy6"]

[ext_resource type="Script" uid="uid://bdat7muj1lv3w" path="res://scenes/enemies/wisp/wisp.gd" id="1_pdocg"]
[ext_resource type="PackedScene" uid="uid://bediyvecmero2" path="res://scenes/hitbox/hitbox.tscn" id="2_57p5f"]
[ext_resource type="PackedScene" uid="uid://cn3a8sl4crc" path="res://scenes/fire/fire_small.tscn" id="3_57p5f"]
[ext_resource type="Script" uid="uid://c2iw5t1thnk12" path="res://scenes/enemies/wisp/state/alert.gd" id="4_6up6a"]
[ext_resource type="PackedScene" uid="uid://3tvie3ok2fau" path="res://scenes/hurtbox/hurtbox.tscn" id="4_7tr8l"]
[ext_resource type="Script" uid="uid://bwnwtysfqeppr" path="res://scenes/enemies/wisp/state/pursue.gd" id="4_b2b4a"]
[ext_resource type="Script" uid="uid://cnn82uyu684ot" path="res://scenes/enemies/wisp/wisp_state.gd" id="5_b2b4a"]
[ext_resource type="Script" uid="uid://b023dqmvy1wyg" path="res://scripts/state_machine.gd" id="5_t81e8"]
[ext_resource type="Script" uid="uid://brdpm8vjgdsb6" path="res://scenes/enemies/wisp/state/death.gd" id="7_q6b6h"]

[sub_resource type="Gradient" id="Gradient_6up6a"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.99450547)
colors = PackedColorArray(0, 0.9411765, 0.99215686, 1, 0, 0.9411765, 0.99215686, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ova0x"]
resource_local_to_scene = true
gradient = SubResource("Gradient_6up6a")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.53, 0.53)

[sub_resource type="Curve" id="Curve_jagov"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.32109228, 0.879585), 0.0, 0.0, 0, 0, Vector2(0.54708093, 0.718229), 0.0, 0.0, 0, 0, Vector2(0.86158186, 0.85791034), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_viv4t"]
curve = SubResource("Curve_jagov")

[sub_resource type="Gradient" id="Gradient_ova0x"]
resource_local_to_scene = true
colors = PackedColorArray(0, 0.93974996, 0.99267167, 1, 0.7158854, 0.2553401, 0.9967863, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rcdd1"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ova0x")

[sub_resource type="Curve" id="Curve_l1wwq"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0.006591335, -0.0018525124), 0.0, 0.0, 0, 0, Vector2(0.1685499, -0.10781765), 0.0, 0.0, 0, 0, Vector2(0.30414313, 0.21489441), 0.0, 0.0, 0, 0, Vector2(0.413371, -0.18969989), 0.0, 0.0, 0, 0, Vector2(0.5376648, 0.08966291), 0.0, 0.0, 0, 0, Vector2(0.61864406, -0.08855128), 0.0, 0.0, 0, 0, Vector2(0.78248584, 0.046313524), 0.0, 0.0, 0, 0, Vector2(0.9990583, -0.011485696), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="Curve" id="Curve_r6bn0"]
_data = [Vector2(0.0028248578, 0), 0.0, 0.0, 0, 0, Vector2(0.18549907, 0.49425715), 0.0, 0.0, 0, 0, Vector2(0.43032014, 0.6243053), 0.0, 0.0, 0, 0, Vector2(0.6167608, 0.41237497), 0.0, 0.0, 0, 0, Vector2(0.76553667, 0.53760654), 0.0, 0.0, 0, 0, Vector2(0.9952919, 0.4195999), 0.0, 0.0, 0, 0]
point_count = 6

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_jagov"]
curve_x = SubResource("Curve_l1wwq")
curve_y = SubResource("Curve_r6bn0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e8vpj"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape_scale = Vector3(3, 2, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -14.9999895
angle_max = 15.0000105
direction = Vector3(0, -1, 0)
spread = 0.0
directional_velocity_min = -50.000015
directional_velocity_max = -50.000015
directional_velocity_curve = SubResource("CurveXYZTexture_jagov")
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_rcdd1")
alpha_curve = SubResource("CurveTexture_viv4t")

[sub_resource type="CircleShape2D" id="CircleShape2D_ova0x"]
radius = 4.0

[sub_resource type="Gradient" id="Gradient_b2b4a"]
resource_local_to_scene = true
colors = PackedColorArray(0, 0.9411765, 0.99215686, 1, 0, 0.9411765, 0.99215686, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6up6a"]
resource_local_to_scene = true
gradient = SubResource("Gradient_b2b4a")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.75, 0.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b2b4a"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6up6a"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rcdd1"]
radius = 0.01

[node name="Wisp" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_pdocg")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_t81e8")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://b023dqmvy1wyg"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_b2b4a")
metadata/_custom_type_script = "uid://cnn82uyu684ot"

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource("4_6up6a")
metadata/_custom_type_script = "uid://cnn82uyu684ot"

[node name="Pursue" type="Node" parent="StateMachine"]
script = ExtResource("4_b2b4a")
metadata/_custom_type_script = "uid://cnn82uyu684ot"

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("7_q6b6h")
metadata/_custom_type_script = "uid://cnn82uyu684ot"

[node name="OffsetContainer" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="OffsetContainer"]
position = Vector2(0, -10)
texture = SubResource("GradientTexture2D_ova0x")

[node name="FireSmall" parent="OffsetContainer" instance=ExtResource("3_57p5f")]
position = Vector2(0, -9)
process_material = SubResource("ParticleProcessMaterial_e8vpj")

[node name="Hitbox" parent="." instance=ExtResource("2_57p5f")]
position = Vector2(0, -9)
damage_amount = 100
damage_type = 4
grounded = true
disabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_ova0x")

[node name="SpriteShadow" type="Sprite2D" parent="."]
z_index = -4
texture_filter = 1
scale = Vector2(0.15, 0.15)
texture = SubResource("GradientTexture2D_6up6a")
metadata/_aseprite_wizard_interface_config_ = {
"output_section": false,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"scale": "1.0",
"slice": "",
"source": "res://scenes/enemies/wisp/shadow.aseprite",
"source_uid": -1
}
metadata/_aseprite_wizard_source_file_hash_ = "988f81b866ba37de1f10b1135b618f54"

[node name="Hurtbox" parent="." instance=ExtResource("4_7tr8l")]
position = Vector2(0, -9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_b2b4a")

[node name="ObstacleDetector" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDetector"]
shape = SubResource("CircleShape2D_6up6a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rcdd1")

[connection signal="blood_drawn" from="Hitbox" to="." method="_on_hitbox_blood_drawn"]
[connection signal="body_entered" from="ObstacleDetector" to="." method="_on_obstacle_detector_body_entered"]
